# LEDPanel

./: .gitignore  API_EXAMPLES.md  DOCKER_DATABASE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LEDMatrix.sln  PROJECT_STRUCTURE.md  QUICKSTART.md  compose.yaml  run  test.py  update.sh
3d-cube-renderer/: Makefile  README.md  config.json  config_loader.cpp  config_loader.h  cube_renderer.h  cube_renderer_options.h  falling_rain  falling_rain.cc  generative_art  generative_art.cc  test_pattern  test_pattern.cc  test_pattern.h
3d-cube-renderer/include/: json.hpp
_legacy/: test.py
_legacy/response_schema/: bahn_api_sample_response.xml  bahnhof_de_sample_reponse.json
_legacy/src/: main.py  timetable_cache.py  timetables_loader.py
_legacy/src/timetables_client/: __init__.py  helpers.py  models.py  parse_xml.py  pyproject.toml  readme.md  test.py  timetables_client.py
_legacy/src/timetables_client/response_schema/: station.json
_testing/: main.cc  scroller  scrolling_textbox.cpp  scrolling_textbox.h
_testing/src/: baseWSettings.cpp
common/: Makefile
common/examples/: README.md  scrolling_box_example.cc
common/include/: baseWSettings.h  config_loader.h  scrolling_box.h  scrolling_textbox.h  update_event.h
db-display/: Makefile  config.json  db_config.cpp  db_config.h  db_display  db_display.cc
display-node/: readme.md
endles_gameOfLife/: Makefile  baseWSettings.cpp  baseWSettings.h  config.json  endles_gameOfLife.cpp  main  settings.yaml
main-node/: Dockerfileasd.txt  README.md  notes.md  requirements.txt  settings.json
main-node/src/: main.py  (+7 more)
(+27 files in other folders)
